--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_ash">#EDEDED</color>
+    <color name="ash">#C0C0C0</color>
+    <color name="icon_ash">#C0C0C0</color>
 </resources>
